[package]
name = "wolfssl-sys"
version = "0.1.1"
edition = "2018"
authors = ["pete.m@expressvpn.com"]
license = "GPL-2.0"
readme = "README.md"
description = "System bindings for WolfSSL"
repository = "https://github.com/expressvpn/wolfssl-sys"
keywords = ["wolfssl", "vpn", "expressvpn", "lightway"]
links = "wolfssl"

[build-dependencies]
bindgen = "0.59.2"
autotools = "0.2.5"
security-claims = { path = "../../tlspuffin-claims" }

[features]
openssl = [] # for enabling the OpenSSL compatibility layer, always turned on for now
vendored-wolfssl520 = []
sancov = []
asan = []
