[package]
name = "wolfssl-sys"
version = "0.1.1"
edition = "2018"
authors = ["pete.m@expressvpn.com"]
license = "GPL-2.0"
readme = "README.md"
description = "System bindings for WolfSSL"
repository = "https://github.com/expressvpn/wolfssl-sys"
keywords = ["wolfssl", "vpn", "expressvpn", "lightway"]
links = "wolfssl"

[build-dependencies]
bindgen = "0.60.1"
autotools = "0.2.5"
security-claims = { path = "../../tlspuffin-claims" }
cfg-if = "1.0.0"

[features]
vendored-wolfssl430 = []
vendored-wolfssl510 = []
vendored-wolfssl520 = []
vendored-wolfssl530 = []
vendored-wolfssl540 = []
sancov = []
asan = []
